@@ -1,5 +1,8 @@
 # $Id$
 
+2007-01-14
+	* Fallback to gettimeofday() when clock_gettime () not available (mac os).
+
 2007-01-09
 	* API change (timing in milliseconds) for dexter_timedsampler_new ().
 
